<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acercade">Acerca de</string>
    <string name="puntuaciones">Puntuaciones</string>

</resources>