                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dip"
            tools:context=".Asteroides" >

        <TextView
            style="@style/TextoAsteroides"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/button01"
            style="@style/TextoAsteroides.Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lanzarJuego"
            android:text="@string/jugar" />

        <Button
            style="@style/TextoAsteroides.Botones"
            android:id="@+id/button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurar" />

        <Button
            android:id="@+id/button03"
            style="@style/TextoAsteroides.Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lanzarAcercaDe"
            android:text="@string/acercade" />

        <Button
	        style="@style/TextoAsteroides.Botones"
            android:id="@+id/button04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puntuaciones" />
    </LinearLayout>